log
Wed 27 Mar 2024 08:03:40 PM UTC: 
 tests:  0|6
total_score: 0/70
b58fa78
Wed 27 Mar 2024 08:08:38 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9fc652b
Wed 27 Mar 2024 08:11:45 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
3ebb92d
Wed 27 Mar 2024 08:14:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0528733
Wed 27 Mar 2024 08:15:25 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f6e61ec
Wed 27 Mar 2024 08:21:16 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:52:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   52 |     return;
      |     ^~~~~~
list.c:42:8: note: declared here
   42 | void * firstList(List * list) {
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
642c32e
